--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
-    <permission
-        android:name="com.parse.starter.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-
     <uses-permission android:name="com.parse.anywall.permission.C2D_MESSAGE" />
+    <permission android:name="com.parse.starter.permission.C2D_MESSAGE"  android:protectionLevel="signature" />
     <!--
      The following permission is not required to use
      Google Maps Android API v2, but is recommended.
