--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,23 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
     defaultConfig {
         applicationId "com.parse.anywall"
         minSdkVersion 11
-        targetSdkVersion 19
+        targetSdkVersion 21
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+            debuggable true
+        }
+    }
+    productFlavors {
     }
 }
 
@@ -22,5 +25,8 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.google.android.gms:play-services:4.2+'
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile 'com.facebook.android:facebook-android-sdk:3.+'
+    compile fileTree(dir: 'libs', include: 'Parse-1.9*.jar')
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile fileTree(dir: 'libs', include: 'ParseFacebook*.jar')
 }
