--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.parse.anywall.permission.C2D_MESSAGE" />
-    <permission android:name="com.parse.starter.permission.C2D_MESSAGE"  android:protectionLevel="signature" />
+
+    <permission
+        android:name="com.parse.starter.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
     <!--
      The following permission is not required to use
      Google Maps Android API v2, but is recommended.
@@ -35,7 +38,6 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission
@@ -82,6 +84,19 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="622395781231182" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="622395781231182" />
+
         <activity
             android:name=".PostActivity"
             android:label="@string/activity_post_title"
@@ -92,36 +107,32 @@
 
         <service android:name="com.parse.PushService" />
 
-        <receiver android:name="com.parse.ParseBroadcastReceiver">
+        <receiver android:name="com.parse.ParseBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.parse.ParsePushBroadcastReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.parse.push.intent.RECEIVE" />
-                <action android:name="com.parse.push.intent.DELETE" />
-                <action android:name="com.parse.push.intent.OPEN" />
-            </intent-filter>
-        </receiver>
-        <receiver
             android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <!--                   IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
+                <!-- IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.parse.anywall" />
             </intent-filter>
         </receiver>
 
         <activity
             android:name=".InfoWindowClickActivity"
-            android:label="@string/title_activity_post_click"></activity>
+            android:label="@string/title_activity_post_click" />
+        <activity
+            android:name=".InboxActivity"
+            android:label="@string/title_activity_inbox" >
+        </activity>
     </application>
 
 </manifest>
+
